CREATE DATABASE SuporteDB;
USE SuporteDB;


CREATE TABLE Spec (
    Id INT PRIMARY KEY IDENTITY(1,1),
    Name NVARCHAR(100) NOT NULL,
    Description NVARCHAR(255)
);

CREATE TABLE [User] (
    Id INT PRIMARY KEY IDENTITY(1,1),
    Username NVARCHAR(100) NOT NULL,
    Email NVARCHAR(100) NOT NULL,
    PasswordHash NVARCHAR(255) NOT NULL,
    Role NVARCHAR(50)
);

CREATE TABLE TecRegister (
    Id INT PRIMARY KEY IDENTITY(1,1),
    SpecId INT NOT NULL,
    UserId INT NOT NULL,
    FOREIGN KEY (SpecId) REFERENCES Spec(Id),
    FOREIGN KEY (UserId) REFERENCES [User](Id)
);

CREATE TABLE Ticket (
    Id INT PRIMARY KEY IDENTITY(1,1),
    UserId INT NOT NULL,
    TecUserId INT NOT NULL,
    Description NVARCHAR(255),
    Title NVARCHAR(100),
    Status NVARCHAR(50),
    CreatedAt DATETIME NOT NULL DEFAULT GETDATE(),
    UpdatedAt DATETIME,
    FOREIGN KEY (UserId) REFERENCES [User](Id),
    FOREIGN KEY (TecUserId) REFERENCES [User](Id)
);

CREATE TABLE Message (
    Id INT PRIMARY KEY IDENTITY(1,1),
    Time DATETIME NOT NULL DEFAULT GETDATE(),
    UserText NVARCHAR(1000),
    BotText NVARCHAR(1000),
    TicketId INT NOT NULL,
    UserId INT NOT NULL,
    FOREIGN KEY (TicketId) REFERENCES Ticket(Id),
    FOREIGN KEY (UserId) REFERENCES [User](Id)
);

CREATE TABLE TicketSpecRelation (
    Id INT PRIMARY KEY IDENTITY(1,1),
    SpecId INT NOT NULL,
    TicketId INT NOT NULL,
    FOREIGN KEY (SpecId) REFERENCES Spec(Id),
    FOREIGN KEY (TicketId) REFERENCES Ticket(Id)
);